--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.llegadasegura">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LLegadaSegura"
         tools:targetApi="31">
+        <activity
+            android:name=".grupo.grupos_create"
+            android:exported="false" />
+        <activity
+            android:name=".grupo.grupos_join"
+            android:exported="false" />
+        <activity
+            android:name=".grupo.grupos"
+            android:exported="false" />
         <activity
             android:name=".TerminosResultActivity"
             android:exported="false" />
