--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
         tools:targetApi="31">
         <activity
             android:name=".grupo.grupos_create"
-            android:exported="false" />
+            android:exported="false">
+
+        </activity>
         <activity
             android:name=".grupo.grupos_join"
-            android:exported="false" />
+            android:exported="false" >
+
+        </activity>
         <activity
             android:name=".grupo.grupos"
             android:exported="false" />
