--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         </activity>
         <activity
-            android:name=".grupo.grupos"
+            android:name=".grupo.Grupos"
             android:exported="false" />
         <activity
             android:name=".TerminosResultActivity"
