--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
+    implementation("com.google.android.material:material:1.6.1")
+    implementation("androidx.fragment:fragment-ktx:1.5.1")
 }
