--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.1'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -50,5 +51,6 @@ dependencies {
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
     implementation("com.google.android.material:material:1.6.1")
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation("androidx.fragment:fragment-ktx:1.5.1")
 }
