--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation("com.google.android.material:material:1.6.1")
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation("androidx.fragment:fragment-ktx:1.5.1")
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
 }
