--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation("androidx.fragment:fragment-ktx:1.5.1")
     implementation 'com.codesgood:justifiedtextview:1.1.0'
+    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
 }
