--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".utils.Cuenta"
             android:exported="false" />
+        <activity
+            android:name=".utils.VersionPremium"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
